# Radia

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: pypi_publish.yml  testing.yml
cpp/cmake/: CMakeLists.txt
cpp/py/: Makefile  setup.py
cpp/src/core/: radintrc.cpp
cpp/vc/: RadiaPython.vcxproj
env/python/: MANIFEST.in  pytest.ini  requirements.txt  setup.py
env/python/radia/: __init__.py  radiapy.pyd  uti_plot_matplotlib.py
env/python/radia/examples/: RADIA_Example01.py  RADIA_Example02.py  RADIA_Example03.py  RADIA_Example04.py  RADIA_Example05.py  RADIA_Example06.py
env/python/radiapy/: uti_plot.py  uti_plot_com.py
env/python/radiapy/examples/: RADIA_Example01.py  RADIA_Example02.py  RADIA_Example03.py  RADIA_Example04.py  RADIA_Example05.py  RADIA_Example06.py
env/radia_python/: MPI_Test.py  run_MPI_Test.sh
ext_lib/fftw/: CMakeLists.txt
